reconstruct contractCallResult / contractCreateResult, contractNonces left out
Signed-off-by: Xin Li <xin@hashgraph.com>